--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 @layer base {
   :root {
@@ -11,6 +11,8 @@
     --primary-light: #002b63;
     --secondary-light: #003479;
     --tertiary-light: #003f90;
+    --error: #ff1a1a;
+    --success: #1aff1a;
   }
 
   html {
@@ -32,6 +34,31 @@
 
   .highlighted-keys .active path {
     fill-opacity: 1;
+  }
+
+  .btn {
+    @apply inline-flex items-center justify-center px-5 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-primary-light transition ease-in-out duration-150;
+  }
+
+  .btn:hover,
+  .btn:focus {
+    @apply transform scale-105;
+  }
+
+  .grid {
+    @apply grid grid-cols-1 gap-4;
+  }
+
+  @media (min-width: 640px) {
+    .grid {
+      @apply grid-cols-2;
+    }
+  }
+
+  @media (min-width: 1024px) {
+    .grid {
+      @apply grid-cols-3;
+    }
   }
 }
 
@@ -61,5 +88,23 @@
 
   .mask-shortcutkeys {
     mask-image: linear-gradient(to right, transparent, black 40%, black calc(60%), transparent 100%);
+  }
+
+  .transition-all {
+    transition: all 0.25s ease-in-out;
+  }
+
+  .has-tooltip:after {
+    @apply bg-black text-white text-xs rounded py-1 px-4 absolute;
+    content: attr(data-tooltip);
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.5s;
+    right: -120%;
+  }
+
+  .has-tooltip:hover:after {
+    visibility: visible;
+    opacity: 1;
   }
 }
