--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,56 +4,51 @@
 
 @layer base {
   :root {
-    --omneer-blue: #001e42;
     --navigation-height: 4.8rem;
   }
 
   html {
-    @apply bg-background font-sans text-off-white;
+    @apply bg-[#001e42] font-sans text-off-white;
     font-size: 62.5%;
-    color: var(--omneer-blue);
   }
 
   .highlighted-keys .active rect:first-child {
     fill-opacity: 0.4;
-    fill: var(--omneer-blue);
   }
 
   .highlighted-keys .active rect:not(:first-child) {
     stroke-opacity: 1;
-    stroke: var(--omneer-blue);
   }
 
   .highlighted-keys .active path {
     fill-opacity: 1;
-    fill: var(--omneer-blue);
   }
 }
 
 @layer utilities {
   .text-shadow {
-    text-shadow: var(--omneer-blue) 0px 3px 12px;
+    text-shadow: rgb(0 0 0 / 56%) 0px 3px 12px;
   }
 
   .text-gradient {
-    background: linear-gradient(to right bottom, var(--omneer-blue) 30%, rgba(255, 255, 255, 0.38));
+    background: linear-gradient(to right bottom, rgb(255, 255, 255) 30%, rgba(255, 255, 255, 0.38));
     background-clip: text;
     color: transparent;
   }
 
   .mask-radial-faded {
-    mask-image: radial-gradient(circle at center center, var(--omneer-blue), transparent 80%)
+    mask-image: radial-gradient(circle at center center, black, transparent 80%)
   }
 
   .mask-linear-faded {
-    mask-image: linear-gradient(var(--omneer-blue), transparent 70%)
+    mask-image: linear-gradient(black, transparent 70%)
   }
 
   .mask-keyboard {
-    mask-image: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.57) 33.98%, var(--omneer-blue) 100%);
+    mask-image: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.57) 33.98%, black 100%);
   }
 
   .mask-shortcutkeys {
-    mask-image: linear-gradient(to right, transparent, var(--omneer-blue) 40%, var(--omneer-blue) calc(60%), transparent 100%);
+    mask-image: linear-gradient(to right, transparent, black 40%, black calc(60%), transparent 100%);
   }
 }
