--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,54 +1,67 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
-@layer base {
-  :root {
+:root {
     --navigation-height: 4.8rem;
-  }
-
-  html {
-    @apply bg-[#001e42] font-sans text-off-white;
-    font-size: 62.5%;
-  }
-
-  .highlighted-keys .active rect:first-child {
-    fill-opacity: 0.4;
-  }
-
-  .highlighted-keys .active rect:not(:first-child) {
-    stroke-opacity: 1;
-  }
-
-  .highlighted-keys .active path {
-    fill-opacity: 1;
-  }
+    --primary-color: #001e42;
+    --text-off-white: #F5F5F5;
+    --text-shadow-color: rgba(0, 0, 0, 0.56);
+    --gradient-color-1: rgb(255, 255, 255);
+    --gradient-color-2: rgba(255, 255, 255, 0.38);
+    --mask-color-1: black;
+    --mask-color-2: transparent;
 }
 
-@layer utilities {
-  .text-shadow {
-    text-shadow: rgb(0 0 0 / 56%) 0px 3px 12px;
-  }
+html {
+    background-color: var(--primary-color);
+    font-family: 'Sans', sans-serif;
+    color: var(--text-off-white);
+    font-size: 62.5%;
+    transition: background-color 0.3s linear;
+}
 
-  .text-gradient {
-    background: linear-gradient(to right bottom, rgb(255, 255, 255) 30%, rgba(255, 255, 255, 0.38));
+.highlighted-keys .active rect:first-child {
+    fill-opacity: 0.4;
+}
+
+.highlighted-keys .active rect:not(:first-child) {
+    stroke-opacity: 1;
+}
+
+.highlighted-keys .active path {
+    fill-opacity: 1;
+}
+
+.text-shadow {
+    text-shadow: var(--text-shadow-color) 0px 3px 12px;
+}
+
+.text-gradient {
+    background: linear-gradient(to right bottom, var(--gradient-color-1) 30%, var(--gradient-color-2));
     background-clip: text;
     color: transparent;
-  }
+}
 
-  .mask-radial-faded {
-    mask-image: radial-gradient(circle at center center, black, transparent 80%)
-  }
+.mask-radial-faded {
+    mask-image: radial-gradient(circle at center center, var(--mask-color-1), var(--mask-color-2) 80%);
+}
 
-  .mask-linear-faded {
-    mask-image: linear-gradient(black, transparent 70%)
-  }
+.mask-linear-faded {
+    mask-image: linear-gradient(var(--mask-color-1), var(--mask-color-2) 70%);
+}
 
-  .mask-keyboard {
-    mask-image: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.57) 33.98%, black 100%);
-  }
+.mask-keyboard {
+    mask-image: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.57) 33.98%, var(--mask-color-1) 100%);
+}
 
-  .mask-shortcutkeys {
-    mask-image: linear-gradient(to right, transparent, black 40%, black calc(60%), transparent 100%);
-  }
+.mask-shortcutkeys {
+    mask-image: linear-gradient(to right, transparent, var(--mask-color-1) 40%, var(--mask-color-1) calc(60%), transparent 100%);
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --primary-color: #121212;
+        --text-off-white: #ffffff;
+    }
 }
